--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@ body {
   margin: 0;
   font-family: 'circular', sans-serif;
   width: 100%;
+  font-size: 14px;
 }
+
+body::placeholder {
+  margin: 0;
+  font-family: 'circular', sans-serif;
+  width: 100%;
+  font-size: 14px;
+}
+
 .header {
   overflow: hidden;
   background-color: #fff;
@@ -14,10 +23,10 @@ body {
 }
 
 h2{
-  font-size: 30px;
+  font-size: 24px;
   color: rgb(75,89,94);
   font-weight: normal;
-  height: 75px;
+  height: 60px;
 }
 
 h1.brand-logo {
@@ -52,7 +61,7 @@ h1.brand-logo {
   appearance: none;
   border-radius: 2px;
   border: 0;
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
   padding: 10px;
   /* float: right; */
@@ -69,7 +78,7 @@ h1.brand-logo {
   appearance: none;
   border-radius: 0px;
   border: 0;
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -149,7 +158,7 @@ h1.brand-logo {
 .property-item{
   list-style: none;
   line-height: 50px;
-  font-size: 18px;
+  font-size: 14px;
   border-top: 1px solid rgb(238, 238, 238);
   padding: 10px;
   /* border-bottom: 1px solid rgb(221, 221, 221); */
@@ -175,7 +184,7 @@ h1.brand-logo {
   height: 50%;
   min-height: 510px;
   overflow: auto;
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
 }
 
@@ -234,7 +243,7 @@ div {
   appearance: none;
   border-radius: 2px;
   border: 1px solid rgb(221, 221, 221);
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
   padding: 10px;
   width: 70px;
@@ -250,7 +259,7 @@ div {
   appearance: none;
   border-radius: 2px;
   border: 1px solid rgb(221, 221, 221);
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
   padding: 10px;
   width: 70px;
@@ -300,7 +309,7 @@ div {
   appearance: none;
   border-radius: 0px;
   border: 1px solid rgb(221, 221, 221);
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'circular', sans-serif;
   padding: 10px;
   margin-left: 10px;
