--- a/Deployment Doc Generator/style.css
+++ b/Deployment Doc Generator/style.css
@@ -44,6 +44,15 @@ h1.brand-logo {
 }
 
 /* Style the header links */
+
+a img:hover {
+
+  opacity:1.0;
+  
+  box-shadow:none;
+  
+  }
+
 .header a {
   float: left;
   color: black;
@@ -53,6 +62,8 @@ h1.brand-logo {
   font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
+  width: 100%;
+  height: 100%;
 }
 
 .submit {
@@ -126,10 +137,10 @@ h1.brand-logo {
 }
 
 /* Change the background color on mouse-over */
-.header a:hover {
+/* .header a:hover {
   background-color: #fff;
   color: black;
-}
+} */
 
 /* Style the active/current link*/
 .header a.active {
