--- a/ad_surveys/style.css
+++ b/ad_surveys/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'circular', sans-serif;
+  font-size: 14px;
 }
 .header {
   overflow: hidden;
@@ -34,6 +35,8 @@ h1.brand-logo {
   font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
+  width: 100%;
+  height: 100%;
 }
 
 .submit {
@@ -69,10 +72,10 @@ h1.brand-logo {
 }
 
 /* Change the background color on mouse-over */
-.header a:hover {
+/* .header a:hover {
   background-color: #fff;
   color: black;
-}
+} */
 
 /* Style the active/current link*/
 .header a.active {
