--- a/Deployment Doc Generator/style.css
+++ b/Deployment Doc Generator/style.css
@@ -121,6 +121,14 @@ a img:hover {
   margin-bottom: 30px;
 }
 
+.icon-remove {
+  margin-left: 10px;
+  width: 10px;
+  height: 10px;
+  background: url(/images/icons/icon-remove.svg) no-repeat center center;
+  background-size: 10px 10px;
+}
+
 .edit-btn{
   border: 0;
 }
